API for testing

--- a/riset.ipynb
+++ b/riset.ipynb
@@ -241,31 +241,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Teks: Ini adalah teks yang akan di-hash\n",
-      "Hash: 805301a5865ecfd6a781ee088ef3ab104ba42ae248c72c96d29aec8aebdb5ff7\n",
+      "create_hash 1234567862821317891962_)^EPD-l6TD\n",
+      "Teks: 123456786282131789196\n",
+      "Hash: d467bb1aa1c2dbc19e0c2c9724b004660386f5dab1fd2b16b64abd6a3cd2113e\n",
+      "check_hash 123456786282131789196\n",
+      "create_hash 1234567862821317891962_)^EPD-l6TD\n",
       "Hash cocok. Teks sesuai dengan hash.\n"
      ]
     }
    ],
    "source": [
     "import helper\n",
+    "import env\n",
     "\n",
     "# Contoh penggunaan\n",
-    "text = \"Ini adalah teks yang akan di-hash\"\n",
+    "text = \"12345678\" + \"6282131789196\"\n",
     "hashed_text = helper.create_hash(text)\n",
     "\n",
     "print(\"Teks:\", text)\n",
     "print(\"Hash:\", hashed_text)\n",
     "\n",
     "# Contoh memeriksa hash\n",
-    "text_to_check = \"Ini adalah teks yang akan di-hash\"  # Teks yang ingin diperiksa\n",
+    "text_to_check = \"123456786282131789196\" # Teks yang ingin diperiksa\n",
     "is_match = helper.check_hash(text_to_check, hashed_text)\n",
     "\n",
     "if is_match:\n",
