--- a/riset.ipynb
+++ b/riset.ipynb
@@ -248,11 +248,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "create_hash 1234567862821317891962_)^EPD-l6TD\n",
-      "Teks: 123456786282131789196\n",
-      "Hash: d467bb1aa1c2dbc19e0c2c9724b004660386f5dab1fd2b16b64abd6a3cd2113e\n",
-      "check_hash 123456786282131789196\n",
-      "create_hash 1234567862821317891962_)^EPD-l6TD\n",
+      "create_hash 1234567862878805249292_)^EPD-l6TD\n",
+      "Teks: 123456786287880524929\n",
+      "Hash: 3200870a45ed6b38c27df8e1ef1d1536192b7eaf82dcdd4f0b98410e38d594da\n",
+      "check_hash 123456786287880524929\n",
+      "create_hash 1234567862878805249292_)^EPD-l6TD\n",
       "Hash cocok. Teks sesuai dengan hash.\n"
      ]
     }
@@ -262,14 +262,14 @@
     "import env\n",
     "\n",
     "# Contoh penggunaan\n",
-    "text = \"12345678\" + \"6282131789196\"\n",
+    "text = \"12345678\" + \"6287880524929\"\n",
     "hashed_text = helper.create_hash(text)\n",
     "\n",
     "print(\"Teks:\", text)\n",
     "print(\"Hash:\", hashed_text)\n",
     "\n",
     "# Contoh memeriksa hash\n",
-    "text_to_check = \"123456786282131789196\" # Teks yang ingin diperiksa\n",
+    "text_to_check = \"123456786287880524929\" # Teks yang ingin diperiksa\n",
     "is_match = helper.check_hash(text_to_check, hashed_text)\n",
     "\n",
     "if is_match:\n",
@@ -432,6 +432,36 @@
     "            \"\"\")[1]\n",
     "\n",
     "saved_token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'data': [{'phone': '6281215992673', 'image': 'http://62.72.51.244:5003/file?filename=recommend.png&key=c%SCV$}hRKuH', 'caption': 'tes'}]}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[True,\n",
+       " '{\"status\":true,\"message\":\"Image Message is pending and waiting to be processed, with error: 0\",\"data\":{\"device_id\":\"A9THY3\",\"quota\":\"unlimited\",\"messages\":[{\"id\":\"28732b60-0e79-4abb-869a-3b373db6755e\",\"phone\":\"6281215992673\",\"message\":null,\"caption\":\"tes\",\"image\":\"file?filename=recommend.png&key=c%SCV$}hRKuH\",\"status\":\"pending\",\"ref_id\":null}]}}']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import helper\n",
+    "img_url = \"http://62.72.51.244:8004/assets/uploads/products/Screenshot_1701804161.png\"\n",
+    "helper.send_wa_multipleSendImage(\"6281215992673\", \"tes\", img_url)"
    ]
   }
  ],
