--- a/riset.ipynb
+++ b/riset.ipynb
@@ -949,10 +949,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[True, '']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import helper\n",
+    "helper.db_update(\"receiver\", {\n",
+    "    \"RECEIVER_DATE\" : None,\n",
+    "    \"RECEIVER_MESSAGE\" : None,\n",
+    "    \"RECEIVER_RESPONSE\" : None,\n",
+    "},f\"RECEIVER_WA IN ('6281215992673', '6281348457600', '6282242023609')\")"
+   ]
   },
   {
    "cell_type": "code",
