--- a/riset.ipynb
+++ b/riset.ipynb
@@ -1194,6 +1194,60 @@
     "else:\n",
     "    print(\"Hash tidak cocok. Teks tidak sesuai dengan hash.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Menggunakan Jamban Sehat\n",
+      "1) Apa itu dengan jamban?\n",
+      "2) Apa saja jenis jamban yang digunakan?\n",
+      "3) Bagaimana memilih jenis jamban?\n",
+      "4) Siapa yang diharapkan menggunakan jamban?\n",
+      "5) Menjaga lingkungan bersih, sehat, dan tidak berbau.\n",
+      "6) Apa saja syarat jamban sehat?\n",
+      "7) Bagaimana cara memelihara jamban sehat?\n",
+      "\n",
+      "Makan Makan sayur dan buah setiap hari\n",
+      "1) Siapa yang diharapkan makan sayur dan buah?\n",
+      "2) Mengapa kita harus makan sayur dan buah?\n",
+      "3) Apa manfaat vitamin yang ada di dalam sayur dan buah?\n",
+      "4) Apa manfaat serat yang ada di dalam sayur dan buah?\n",
+      "5) Manfaat makanan berserat\n",
+      "6) Berapa banyak sayur dan buah dalam sehari harus kita makan?\n",
+      "7) Sayur dan buah seperti apa yang bagus kita makan?\n",
+      "8) Bagaimana mengolah sayur dan buah dengan tidak merusak atau mengurangi kandungan gizinya?\n",
+      "\n",
+      "Melakukan Melakukan aktivitas fisik\n",
+      "1) Siapa yang diharapkan melakukan aktivitas fisik?\n",
+      "2) Apa itu aktivitas fisik?\n",
+      "3) Apa jenis aktivitas fisik yang dapat dilakukan?\n",
+      "4) Berapa lama seseorang perlu melakukan aktivitas fisik setiap hari?\n",
+      "5) Bagaimana cara melakukan aktivitas yang benar?\n",
+      "6) Apa keuntungan melakukan aktivitas fisik secara teratur?\n",
+      "7) Beberapa tips dalam beraktivitas fisik:\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"\"\"Menggunakan Jamban Sehat\n",
+    "1) Apa itu dengan jamban?\\r2) Apa saja jenis jamban yang digunakan?\\r3) Bagaimana memilih jenis jamban?\\r4) Siapa yang diharapkan menggunakan jamban?\\r5) Menjaga lingkungan bersih, sehat, dan tidak berbau.\\r6) Apa saja syarat jamban sehat?\\r7) Bagaimana cara memelihara jamban sehat?\n",
+    "\n",
+    "Makan Makan sayur dan buah setiap hari\n",
+    "1) Siapa yang diharapkan makan sayur dan buah?\\r2) Mengapa kita harus makan sayur dan buah?\\r3) Apa manfaat vitamin yang ada di dalam sayur dan buah?\\r4) Apa manfaat serat yang ada di dalam sayur dan buah?\\r5) Manfaat makanan berserat\\r6) Berapa banyak sayur dan buah dalam sehari harus kita makan?\\r7) Sayur dan buah seperti apa yang bagus kita makan?\\r8) Bagaimana mengolah sayur dan buah dengan tidak merusak atau mengurangi kandungan gizinya?\n",
+    "\n",
+    "Melakukan Melakukan aktivitas fisik\n",
+    "1) Siapa yang diharapkan melakukan aktivitas fisik?\\r2) Apa itu aktivitas fisik?\\r3) Apa jenis aktivitas fisik yang dapat dilakukan?\\r4) Berapa lama seseorang perlu melakukan aktivitas fisik setiap hari?\\r5) Bagaimana cara melakukan aktivitas yang benar?\\r6) Apa keuntungan melakukan aktivitas fisik secara teratur?\\r7) Beberapa tips dalam beraktivitas fisik:\"\"\"\n",
+    "\n",
+    "x = s.replace(\"\\r\", \"\\n\")\n",
+    "\n",
+    "print(x)"
+   ]
   }
  ],
  "metadata": {
